--- a/missingkids/less/home-teaser.less
+++ b/missingkids/less/home-teaser.less
@@ -1,7 +1,7 @@
 .home-teaser-wrapper {
   @media (min-width: @screen-md) {
     &:last-child {
-      padding-bottom: 32px;
+      padding-bottom: 16px;
     }
   }
   @media (max-width: @screen-sm) {
